namespaces/live.cloud-platform.service.justice.gov.uk/laa-submit-crime-forms-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-submit-crime-forms-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
    cloud-platform.justice.gov.uk/namespace: "laa-submit-crime-forms-uat"
    component: allow-laa-crime-application-store-api-uat
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-non-standard-crime-claims"
    cloud-platform.justice.gov.uk/application: "Submit criminal legal aid forms"
    cloud-platform.justice.gov.uk/owner: "Non Standard Crime Claims: nscc@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-submit-crime-forms"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-forms-team"
    cloud-platform.justice.gov.uk/review-after: ""
